--- a/src/main/ConfirmationPage/ConfirmationPage.fxml
+++ b/src/main/ConfirmationPage/ConfirmationPage.fxml
@@ -13,6 +13,7 @@
          <children>
             <Pane layoutX="27.0" layoutY="46.0" prefHeight="628.0" prefWidth="909.0" style="-fx-background-color: #B1D5F6;">
                <children>
+                  <Button fx:id="goBackToFrontButton" layoutX="378.0" layoutY="517.0" mnemonicParsing="false" onMouseClicked="#onGoBackToFrontButtonPressed" prefHeight="69.0" prefWidth="203.0" text="TEMP (TILLBAKS TILL START)" />
                   <Label layoutX="325.0" layoutY="53.0" prefHeight="50.0" prefWidth="272.0" style="-fx-background-color: white;" text="    Köp genomfört!">
                      <font>
                         <Font size="34.0" />
@@ -35,12 +36,7 @@
                   </Label>
                   <ImageView fitHeight="87.0" fitWidth="150.0" layoutX="397.0" layoutY="146.0" pickOnBounds="true" preserveRatio="true" />
                   <Button layoutX="285.0" layoutY="517.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="80.0" text="Button" />
-                  <Button layoutX="378.0" layoutY="517.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="80.0" text="Button" />
-                  <Button layoutX="472.0" layoutY="517.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="140.0" />
-                  <ImageView fitHeight="69.0" fitWidth="80.0" layoutX="286.0" layoutY="515.0" pickOnBounds="true" preserveRatio="true" />
-                  <ImageView fitHeight="69.0" fitWidth="80.0" layoutX="378.0" layoutY="520.0" pickOnBounds="true" preserveRatio="true" />
-                  <ImageView fitHeight="69.0" fitWidth="80.0" layoutX="469.0" layoutY="518.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label layoutX="541.0" layoutY="519.0" prefHeight="69.0" prefWidth="72.0" text="Kundservice &amp; Hjälp" wrapText="true" />
+                  <Button layoutX="592.0" layoutY="517.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="140.0" />
                </children>
             </Pane>
          </children>
