--- a/src/main/Payment/Payment.fxml
+++ b/src/main/Payment/Payment.fxml
@@ -17,7 +17,7 @@
          <top>
             <Pane prefHeight="101.0" prefWidth="960.0" style="-fx-background-color: #037C99;" BorderPane.alignment="CENTER">
                <children>
-                  <Button layoutX="26.0" layoutY="14.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="97.0" text="Button" />
+                  <Button fx:id="homeButton" layoutX="26.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#closeWizard" prefHeight="64.0" prefWidth="97.0" text="Button" />
                   <Button layoutX="801.0" layoutY="12.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="123.0" text="Button" />
                   <ImageView fitHeight="81.0" fitWidth="423.0" layoutX="247.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" />
                </children>
@@ -77,6 +77,7 @@
                            <children>
                               <ImageView fx:id="previousImage" fitHeight="32.0" fitWidth="88.0" layoutX="14.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" />
                               <ImageView fx:id="nextImage" fitHeight="32.0" fitWidth="88.0" layoutX="661.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" />
+                              <Button fx:id="previousButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#previousStep" text="Button" />
                            </children>
                         </Pane>
                         <Pane layoutX="23.0" layoutY="24.0" prefHeight="43.0" prefWidth="778.0" style="-fx-background-color: white;">
