--- a/src/main/PersonalData/PersonalData.fxml
+++ b/src/main/PersonalData/PersonalData.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
@@ -29,7 +30,7 @@
                      <children>
                         <Pane layoutX="23.0" layoutY="101.0" prefHeight="416.0" prefWidth="781.0">
                            <children>
-                              <StackPane layoutY="1.0" prefHeight="416.0" prefWidth="781.0" style="-fx-background-color: red;">
+                              <StackPane layoutY="1.0" prefHeight="416.0" prefWidth="781.0" style="-fx-background-color: lightblue;">
                                  <children>
                                     <Pane prefHeight="200.0" prefWidth="200.0">
                                        <children>
@@ -73,22 +74,21 @@
                                                 <Font size="17.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="nameLbl" layoutX="38.0" layoutY="62.0" prefHeight="35.0" prefWidth="245.0" promptText="Nicklas" style="-fx-background-radius: 20;" />
-                                          <TextField fx:id="surnameLbl" layoutX="38.0" layoutY="140.0" prefHeight="35.0" prefWidth="245.0" promptText="Börjesson" style="-fx-background-radius: 20;" />
-                                          <TextField fx:id="adressLbl" layoutX="38.0" layoutY="214.0" prefHeight="35.0" prefWidth="245.0" promptText="Kantarellslingan 24" style="-fx-background-radius: 20;" />
-                                          <TextField fx:id="postcodeLbl" layoutX="38.0" layoutY="284.0" prefHeight="35.0" prefWidth="245.0" promptText="42011" style="-fx-background-radius: 20;" />
-                                          <TextField fx:id="areaLbl" layoutX="38.0" layoutY="356.0" prefHeight="35.0" prefWidth="245.0" promptText="Göteborg" style="-fx-background-radius: 20;" />
-                                          <TextField fx:id="mobilLbl" layoutX="412.0" layoutY="62.0" prefHeight="35.0" prefWidth="245.0" promptText="+46 ..." style="-fx-background-radius: 20;" />
-                                          <TextField fx:id="emailLbl" layoutX="412.0" layoutY="140.0" prefHeight="35.0" prefWidth="245.0" promptText="börjesson@exempel.nu" style="-fx-background-radius: 20;" />
-                                          <TextField fx:id="extrainfLabl" layoutX="412.0" layoutY="214.0" prefHeight="35.0" prefWidth="245.0" promptText="Ex. våning, etc." style="-fx-background-radius: 20;" />
+                                          <TextField fx:id="firstNameTextField" layoutX="38.0" layoutY="62.0" prefHeight="35.0" prefWidth="245.0" promptText="Nicklas" style="-fx-background-radius: 20;" />
+                                          <TextField fx:id="lastNameTextField" layoutX="38.0" layoutY="140.0" prefHeight="35.0" prefWidth="245.0" promptText="Börjesson" style="-fx-background-radius: 20;" />
+                                          <TextField fx:id="addressTextField" layoutX="38.0" layoutY="214.0" prefHeight="35.0" prefWidth="245.0" promptText="Kantarellslingan 24" style="-fx-background-radius: 20;" />
+                                          <TextField fx:id="postcodeTextField" layoutX="38.0" layoutY="284.0" prefHeight="35.0" prefWidth="245.0" promptText="42011" style="-fx-background-radius: 20;" />
+                                          <TextField fx:id="areaTextField" layoutX="38.0" layoutY="356.0" prefHeight="35.0" prefWidth="245.0" promptText="Göteborg" style="-fx-background-radius: 20;" />
+                                          <TextField fx:id="mobileNumberTextField" layoutX="412.0" layoutY="62.0" prefHeight="35.0" prefWidth="245.0" promptText="+46 ..." style="-fx-background-radius: 20;" />
+                                          <TextField fx:id="emailTextField" layoutX="412.0" layoutY="140.0" prefHeight="35.0" prefWidth="245.0" promptText="börjesson@exempel.nu" style="-fx-background-radius: 20;" />
+                                          <TextField fx:id="extraInfTextField" layoutX="412.0" layoutY="214.0" prefHeight="35.0" prefWidth="245.0" promptText="Ex. våning, etc." style="-fx-background-radius: 20;" />
                                           <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="640.0" layoutY="134.0" pickOnBounds="true" preserveRatio="true" />
                                           <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="640.0" layoutY="208.0" pickOnBounds="true" preserveRatio="true" />
-                                          <Button layoutX="400.0" layoutY="357.0" mnemonicParsing="false" prefHeight="14.0" prefWidth="14.0" text="Button" />
-                                          <Label layoutX="438.0" layoutY="359.0" prefHeight="22.0" prefWidth="298.0" text="Spara mina personuppgifter till nästa köp">
+                                          <CheckBox fx:id="personalCheckBox" layoutX="412.0" layoutY="362.0" mnemonicParsing="false" text="Spara mina personuppgifter till nästa köp">
                                              <font>
                                                 <Font size="17.0" />
                                              </font>
-                                          </Label>
+                                          </CheckBox>
                                           <Label layoutX="516.0" layoutY="113.0" prefHeight="17.0" prefWidth="89.0" text="(Valbart)" />
                                           <Label layoutX="590.0" layoutY="185.0" prefHeight="17.0" prefWidth="89.0" text="(Valbart)" />
                                        </children>
